--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.28",
     "expo": "^30.0.1",
+    "graphql": "^14.1.1",
     "react": "16.3.1",
+    "react-apollo": "^2.4.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-calendars": "^1.22.0",
     "react-native-elements": "^1.0.0-beta7",
     "react-navigation": "^2.18.0"
   }
